--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Excluding Twitter credential information from codebase
+Twittercredentials.py
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
